<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">

    <EditText
        android:id="@+id/EditCal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="103dp"
        android:hint="@string/calories_hint"
        android:fontFamily="sans-serif-condensed-light"
        android:inputType="number"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/EditPro"
        app:layout_constraintStart_toStartOf="parent"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.712"
        android:autofillHints="" />

    <EditText
        android:id="@+id/EditPro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:gravity="center"
        android:layout_marginEnd="111dp"
        android:hint="@string/protein_hint"
        android:fontFamily="sans-serif-condensed-light"
        android:inputType="number"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/EditCal"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.712"
        android:autofillHints="" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="81dp"
        android:background="@color/gunmetal"
        android:gravity="center"
        android:paddingTop="@dimen/fab_margin"
        android:paddingBottom="15sp"
        android:fontFamily="sans-serif-black"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="35sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


    </TextView>

    <ImageButton
        android:id="@+id/settingsb"
        android:layout_width="52dp"
        android:layout_height="51dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/default_button"
        android:text="@string/button"
        android:tint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.955"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/todo" />

    <TextView
        android:id="@+id/ProteinView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:gravity="center"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/protein_g"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/RemainingCal" />

    <TextView
        android:id="@+id/CalorieView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="145dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:gravity="center"
        android:text="@string/calories"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/RemainingCal"
        android:layout_width="140dp"
        android:layout_height="76dp"
        android:layout_marginTop="24dp"
        android:fontFamily="sans-serif-condensed-light"
        android:hint="@string/zero"
        android:gravity="center"
        android:textSize="50sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/CalorieView" />

    <TextView
        android:id="@+id/RemainingPro"
        android:layout_width="140dp"
        android:layout_height="76dp"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:hint="@string/zero"
        android:fontFamily="sans-serif-condensed-light"
        android:textSize="50sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ProteinView" />

    <Button
        android:id="@+id/plusCal"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:layout_marginBottom="104dp"
        android:text="@string/subtract"
        android:fontFamily="sans-serif"
        android:textSize="20sp"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@drawable/custom_button"
        android:textAllCaps="false"/>

</android.support.constraint.ConstraintLayout>